2002-10-02  Elena Zannoni  <ezannoni@redhat.com>
 
	* inferior.h (registers_info, stepi_command, nexti_command,
	continue_command, interrupt_target_command): Export from infcmd.c.
	* frame.h (args_info, selected_frame_level_changed_hook,
	return_command): Export from stack.c.
	* v850ice.c (stepi_command, nexti_command, continue_command): use
	prototypes from inferior.h.
	* tracepoint.c (registers_info, args_info, locals_info): Use
	prototypes from frame.h and inferior.h.
	* Makefile.in (mi-main.o): Add dependency on frame.h.

2002-10-02  Andrew Cagney  <ac131313@redhat.com>

	* rs6000-tdep.c (rs6000_store_struct_return): Store struct_return
	value in register 3 adjusted by ppc_gp0_regnum.

	* rs6000-tdep.c (skip_prologue): Bias alloca_reg by ppc_gp0_regnum.

2002-10-02  Marko Mlinar <markom@opencores.org>

        * MAINTAINERS: Add myself to the Write After Approval list.

2002-10-01  Alexandre Oliva  <aoliva@redhat.com>

	* mips-tdep.c (mips_find_abi_section): .mdebug.abi64 is the name
	of the section for the N64 ABI, fixed.

	* config/mips/tm-irix6.h: Include solib.h.

2002-10-01  Elena Zannoni  <ezannoni@redhat.com>

	* dwarf2read.c (dwarf_stack_op_name): Recognize more dwarf3 and
	GNU operators.

2002-10-01  Andrew Cagney  <ac131313@redhat.com>

	* NEWS: Mention that MI syntax, selected by "mi" changed to "mi2"
	and that "mi0" syntax has been removed.

2002-09-30  David Carlton  <carlton@math.stanford.edu>

	* Makefile.in (ppc-sysv-tdep.o): Depend on gdb_string_h.
	* ppc-sysv-tdep.c: #include "gdb_string.h".
	* remote-sds.c (getmessage): Add semicolon after 'retry' label to
	pacify GCC.

2002-10-01  Andrew Cagney  <ac131313@redhat.com>

	* rs6000-tdep.c (rs6000_gdbarch_init): For powerpc:7400, fix
	"vrsave"'s register number.

2002-09-30  Andrew Cagney  <ac131313@redhat.com>

	* mips-tdep.c (mips_frame_saved_pc): When a generic dummy frame,
	use frame_unwind_signed_register to obtain the PC.
	(mips_frame_chain): Handle a generic dummy frame.